--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
 				discount.appendChild(strike);
 				discount.appendChild(price);
 				strike.appendChild(strikePrice);
-				name.appendChild(document.createTextNode(decodeURI(j[k].name));
+				name.appendChild(document.createTextNode(decodeURI(j[k].name)));
 				comparePrice.appendChild(document.createTextNode(j[k].isDiscount));
 				strikePrice.appendChild(document.createTextNode(j[k].Oldprice));
 				price.appendChild(document.createTextNode(j[k].Newprice));
