--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
 			
 		</style>
 		<script type="text/javascript" src="./priceSheet.js"></script>
-		<script src="https://cdn.highcharts.com.cn/highcharts/highcharts.js"></script>
-		<script src="https://cdn.highcharts.com.cn/highcharts/themes/dark-unica.js"></script>
+		<script src="https://code.hcharts.cn/highcharts/highcharts.js"></script>
+		<script src="https://code.hcharts.cn/highcharts/highcharts.js"></script>
 	</head>
 	<body>
 		<div id="background_html"></div>
